# AIOPS_Repo

./: .gitignore  PRODUCT.md  README.md  aiops_preview.html  aiops_preview_launcher.py  demo_presenter_output_preview.txt  demo_presenter_sample_agent.sh  demo_sample_agent_pod_pressure.sh  demo_start.sh  demo_stop.sh  docker-compose.rca-kb.yml
AIOPS/: .env.example  .gitignore  DEMO_SCRIPT.md  POC_STACK_AND_SCOPE.md  README.md  README_JA.md  USER_GUIDE.md  requirements.txt  sample_issue.json
AIOPS/app/: web.py
AIOPS/config/: project_map.json
AIOPS/core/: schemas.py  settings.py
AIOPS/docs/: API_REFERENCE_FOR_INTEGRATION.md  LINUX_VM_DEPLOYMENT_AND_E2E.md  PRODUCTION_LOAD_DEGRADATION_USE_CASE.md  SOLUTION_ARCHITECTURE_PLAN.md  UPSTREAM_DEVELOPER_HANDOFF.md  UPSTREAM_INTEGRATION_CONTRACT.md  aiops_clean_architecture.html  post_demo_aiops_report.html
AIOPS/scripts/: bootstrap_linux.sh  codex_stable.sh  generate_bilingual_remediation_deck.ps1  reset_demo_repos.ps1  (+3 more)
AIopsTelemetry/: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md  aiops_sdk_requirements.txt  architecture_diagram.html  code_fix.init  diagram2.html  e2e_demo.py  non_functional_requirements.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_demo.sh  setup.py
AIopsTelemetry/.claude/: launch.json
AIopsTelemetry/aiops_sdk/: __init__.py  callback_handler.py  client.py  config.py  context.py  decorators.py
AIopsTelemetry/aiops_sdk/cli/: __init__.py  instrument.py
AIopsTelemetry/db/: README.md  postgres_pgvector.sql
AIopsTelemetry/docs/: BRANCHING.md  BUSINESS_IMPACT.md  CONTRIBUTING.md  DESIGN.md
AIopsTelemetry/scripts/: run_safe_vm_topology_incident.py  run_topology_correlation_agent.py  seed_demo_issues.py  seed_demo_issues_sqlite.py  seed_vm_cpu_starvation_incident.py
AIopsTelemetry/server/: config.py  main.py
AIopsTelemetry/server/api/: agent.py  analysis.py  autofix.py  chat.py  escalations.py  health.py  incidents.py  ingest.py  issues.py  knowledge.py  langfuse_traces.py  metrics.py  remediation.py  traces.py
AIopsTelemetry/server/dashboard/: conversation_chat_j.html  conversation_flow_j.html  conversation_j.html  index.html  light.html  light_j.html  ops_dashboard.html
AIopsTelemetry/server/database/: engine.py  models.py
AIopsTelemetry/server/engine/: autofix_agent.py  bilingual.py  escalation_engine.py  issue_detector.py  knowledge_base.py  langfuse_reporter.py  langfuse_sync.py  mcp_observability.py  metrics_collector.py  modifier_agent.py  process_manager.py  rca_client.py  reason_analyzer.py  topology_agent.py  topology_correlation_agent.py  webhook_dispatcher.py
AIopsTelemetry/tests/: conftest.py
AIopsTelemetry/tests/integration/api/: test_health.py  test_issues.py  test_trace_profile.py
AIopsTelemetry/tests/unit/database/: test_models.py
AIopsTelemetry/tests/unit/engine/: test_issue_detector.py
AIopsTelemetry/tests/unit/sdk/: test_client.py
Invastigate_flow_with_Poller/: .env.example  mock_aiops_server.py  output_format.json  requirements.txt  test_polling_scenario.sh
MCPObservability/: README.md  server.py
MedicalAgent/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  code_fix.init  demo_error_inject.py  docker-compose.yml  prometheus.yml  requirements.txt
MedicalAgent_GitHub/: .env.example  CLAUDE.md  README.md
SampleAgent_GitHub/: .env.example  code_fix.init  run.py
architecture/: aiops_e2e_sequence.mmd  aiops_e2e_sequence_ja.mmd  render_diagrams.sh
demo/: aiops_preview.html  aiops_preview_launcher.py  presenter_sample_agent.sh  sample_agent_pod_pressure.sh  start.sh  stop.sh
scripts/: demo_lib.sh
(+133 files in other folders)
