[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"           # pytest-asyncio: no need to mark every async test
addopts = [
    "-ra",                      # show short summary for all non-passing
    "--strict-markers",         # fail on unknown markers
    "--tb=short",               # concise tracebacks
    "--import-mode=importlib",  # modern import mode
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise the full HTTP stack",
    "slow: tests that take > 5 seconds",
]

# ── Coverage ──────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["server", "aiops_sdk"]
omit = [
    "*/venv/*",
    "*/tests/*",
    "run.py",
    "setup.py",
    "server/dashboard/*",       # JS/HTML not measured by pytest-cov
]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

# Per-module coverage thresholds (enforced in CI via --cov-fail-under per path)
# Global minimum applied by CI: 80%
# SDK:     100%  (see CLAUDE.md §4a)
# Engine:   90%  (see CLAUDE.md §4b)
# API:      85%  (see CLAUDE.md §4c)
# Database:100%  (see CLAUDE.md §4d)

# ── Ruff (linting) ────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["server", "aiops_sdk", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line length — handled by black
    "B008",   # FastAPI Depends() in function defaults is intentional
    "N805",   # first argument of method named 'self' — conflicts with pydantic validators
    "SIM117", # nested with statements — readability preference
]

[tool.ruff.lint.isort]
known-first-party = ["server", "aiops_sdk"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert is fine in tests
    "ANN",    # no annotation requirement for tests
    "D",      # no docstring requirement for tests
]

# ── Black (formatting) ────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    venv
  | \.git
  | \.mypy_cache
  | \.ruff_cache
  | build
  | dist
)/
'''

# ── Mypy (type checking) ──────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false                  # start lenient; tighten as coverage grows
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true   # third-party stubs not always available

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true            # tests are excluded from strict type checks
